...
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/imei_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/txt_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:hint="@string/enter_digit_imei"
                        android:maxLength="16"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_check"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imei_til"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:background="@drawable/button_background"
...
